kubernetes/apps/default/mediamanager/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mediamanager
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "media.ragas.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mediamanager
          port: 8000
